--- a/new/shipping/aboutEn.html
+++ b/new/shipping/aboutEn.html
@@ -39,13 +39,13 @@
                     <!--/.dropdown-menu -->
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./about.html">Sobre Nosotros</a>
+                    <a class="nav-link dropdown-toggle" href="./aboutEn.html">About Us</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services.html">Servicios</a>
+                    <a class="nav-link dropdown-toggle" href="./servicesEn.html">Services</a>
                   </li>
                   <li class="nav-item dropdown dropdown-mega">
-                    <a class="nav-link dropdown-toggle" href="./contact.html">Contacto</a>
+                    <a class="nav-link dropdown-toggle" href="./contactEn.html">Contact</a>
                   </li>
                   <div class="offcanvas-footer d-lg-none">
                     <div>
@@ -69,7 +69,7 @@
                 <!-- /.languaje -->
                 <li class="nav-item dropdown language-select text-uppercase">
                   <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">Es</a>
+                    aria-haspopup="true" aria-expanded="false">En</a>
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="indexEn.html">En</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="index.html">Es</a></li>
@@ -101,9 +101,9 @@
         <div class="row">
           <div class="col-xl-6 mx-auto">
             <h1 class="display-1 mb-4">REPREMAR SHIPPING</h1>
-            <p class="lead fs-lg mb-4">Miembro de Grupo Repremar.</p>
-            <figure class="position-relative" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/about2.jpg"
-              alt="" /></figure>
+            <p class="lead fs-lg mb-4">Member of Repremar Group.</p>
+            <figure class="position-relative" style="bottom: 0; left: 0; z-index: 2;"><img
+                src="./assets/img/photos/about2.jpg" alt="" /></figure>
           </div>
           <!-- /column -->
         </div>
@@ -114,7 +114,7 @@
     <!-- /section -->
     <section class="wrapper bg-light angled upper-end lower-end">
       <div class="container py-14 py-md-16">
-        
+
         <div class="container py-14 py-md-16">
           <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
             <div class="col-md-8 col-lg-6 col-xl-5 order-lg-2 position-relative">
@@ -125,17 +125,20 @@
             </div>
             <!--/column -->
             <div class="col-lg-6">
-              <h2 class="display-4 mb-3">¿Quienes somos?</h2>
-              <p class="lead fs-lg">REPREMAR fue fundada en el año 1946 y desde entonces provee servicios de agenciamiento marítimo y
-                portuarios a las principales compañías navieras y buques que operan en la Costa Este de Sudamérica y Rio
-                de la Plata.</p>
-              <p class="mb-6">Antiguamente perteneciente al Grupo Vestey de Inglaterra, desde 1982 pasa a control de la familia Pena.
-                Bajo la conducción de sus nuevos propietarios, la compañía fue reorganizada y diversificó su espectro de
-                servicios y unidades de negocios.</p>
-                <p class="mb-6">Actualmente REPREMAR Shipping forma parte de uno de los grupos locales más importantes en la provisión de
-                  servicios de agenciamiento marítimo, operaciones portuarias, logística y transporte internacional de
-                  cargas
-                  en sus diferentes modalidades: marítimo, aéreo y terrestre</p>
+              <h2 class="display-4 mb-3">Who we are?</h2>
+              <p class="lead fs-lg">Repremar Was Founded In 1946 And Since Then It Has Been Providing Ship Agency
+                And Port Services To The Leading Shipping Companies And Vessels Which Operate On The Tip Of The East
+                Coast Of South America And The River Plate.
+              </p>
+              <p class="mb-6">Formerly, it belonged to the English Vestey Group, but in 1982 it was taken by the Pena
+                family. Under the new management, the company was restructured and diversified its range of services and
+                business units.
+              </p>
+              <p class="mb-6">Currently, REPREMAR Shipping is part of one of the local leading groups which provide
+                shipping services, port operations, logistics and international cargo transportation in its different
+                modes: air, sea and land. In a global world which has become more and more demanding and complex, we are
+                committed to provide outstanding quality services driven by highly reliable processes.
+              </p>
               <div class="row gx-xl-10 gy-6">
                 <div class="col-md-6">
                   <div class="d-flex flex-row">
@@ -145,8 +148,8 @@
                     </div>
                     <div>
                       <h4 class="mb-1"></h4>
-                      <p class="mb-0">Ofrecemos un enfoque moderno a nuestro servicio,
-                        adaptandonos continuamente a los cambios en el rubro.</p>
+                      <p class="mb-0">
+                        We offer a modern approach to our service, continually adapting to changes in the industry.</p>
                     </div>
                   </div>
                 </div>
@@ -159,8 +162,8 @@
                     </div>
                     <div>
                       <h4 class="mb-1"></h4>
-                      <p class="mb-0">Invertimos continuamente en equipo y
-                        software para reforzar nuestras capacidades.</p>
+                      <p class="mb-0">We continually invest in equipment and software to strengthen our capabilities.
+                      </p>
                     </div>
                   </div>
                 </div>
@@ -175,15 +178,14 @@
         <!--/.row -->
         <div class="row gx-md-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-6">
-            <h2 class="fs-15 text-uppercase text-muted mb-3">Nuestro Grupo</h2>
-            <h3 class="display-4 mb-5">Somos parte de Grupo Repremar.</h3>
-            <p>REPREMAR es un Grupo de empresas de primera línea que ofrece servicios de agenciamiento marítimo,
-              transporte internacional de cargas, operaciones portuarias, servicios integrales de logística, GSA de
-              carga para aerolíneas,
-              bienes raíces y proyectos especiales. Nuestra empresa madre, REPREMAR Shipping es una reconocida agencia
-              marítima que ofrece servicios de back-office para cruceros, portacontenedores, petroleros, graneleros y
-              buques
-              de enlace que operan en cualquier puerto de la región.</p>
+            <h2 class="fs-15 text-uppercase text-muted mb-3">Our Group </h2>
+            <h3 class="display-4 mb-5">We are part of Repremar Group</h3>
+            <p>REPREMAR is a leading Group of Companies engaged in ship agency, freight forwarding, port operations,
+              integral logistics services, cargo GSA for airlines, real estate and special projects. Our mother company,
+              REPREMAR Shipping, is a well-known port agency and back-office services provider for cruises, container
+              ships, tankers, bulk carriers and feeder vessels operating at any regional port.
+
+            </p>
             <a href="https://www.repremar.com" class="btn btn-primary rounded-pill mb-0">Repremar Group Web</a>
           </div>
           <!--/column -->
@@ -194,12 +196,12 @@
                     class="number fs-22">01</span></span>
               </div>
               <div>
-                <h4 class="mb-1">¿Quien es Grupo Repremar?</h4>
-                <p class="mb-0">Somos un grupo de empresas relacionadas principalmente al comercio exterior, nuestra
-                  casa madre Repremar Shipping fue fundada en 1946, pertenecía antiguamente al Vestey Group
-                  (Inglaterra). En 1982 fue adquirida
-                  por la familia Pena. Con los nuevos propietarios la empresa fue reorganizada logrando una gran
-                  expansión en sus actividades y en el alcance de sus servicios.
+                <h4 class="mb-1">Our Start</h4>
+                <p class="mb-0">We are a group of companies mainly related to foreign trade, our
+                  mother company Repremar Shipping was founded in 1946, it formerly belonged to the Vestey Group
+                  (England). In 1982 it was acquired
+                  by the Pena family. With the new owners the company was reorganized, achieving great
+                  expansion in its activities and in the scope of its services.
                 </p>
               </div>
             </div>
@@ -209,8 +211,10 @@
                     class="number fs-22">02</span></span>
               </div>
               <div>
-                <h4 class="mb-1">¿A quienes representa Repremar Group?</h4>
-                <p class="mb-0">Hemos representado navieras como COSCO, CHINA SHIPPING y CSAV, en la actualidad trabajamos con Yang Ming Lines como full agent y partners de Happag Lloyd.</p>
+                <h4 class="mb-1">Our Partners</h4>
+                <p class="mb-0">
+                  We have represented shipping companies such as COSCO, CHINA SHIPPING and CSAV, currently
+                  we work with Yang Ming Lines as full agent and partners of Happag Lloyd.</p>
               </div>
             </div>
           </div>
@@ -232,9 +236,9 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-lg-4">
           <div class="widget">
-            <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
-            <p class="lead mb-5">Repremar Shipping el mejor agenciamiento maritimo del mercado.</p>
-            <a href="./contact.html" class="btn btn-white  rounded-pill">Contáctanos</a>
+            <h3 class="h2 mb-3 text-white">Stay in contact</h3>
+            <p class="lead mb-5">Repremar Shipping distiguished in the region.</p>
+            <a href="./contactEn.html" class="btn btn-white  rounded-pill">Contact Us</a>
           </div>
           <!-- /.widget -->
         </div>
@@ -243,7 +247,7 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3"></h4>
             <ul class="list-unstyled text-reset mb-0">
-              <li><a href="./contact.html"></a></li>
+              <li><a href="./contactEn.html"></a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -251,11 +255,11 @@
         <!-- /column -->
         <div class="col-md-4 col-lg-2">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Saber más</h4>
+            <h4 class="widget-title text-white mb-3">More Info</h4>
             <ul class="list-unstyled  mb-0">
-              <li><a href="#" style="color:white">Sobre nosotros</a></li>
-              <li><a href="#" style="color:white">Servicios</a></li>
-
+              <li><a href="#" style="color:white">About Us</a></li>
+              <li><a href="#" style="color:white">Services</a></li>
+              <li><a href="#" style="color:white"></a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -263,8 +267,8 @@
         <!-- /column -->
         <div class="col-md-4 col-lg-2">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Información</h4>
-            <address>Misiones 1372 1er Piso, Montevideo, Uruguay</address>
+            <h4 class="widget-title text-white mb-3">Information</h4>
+            <address>Misiones 1372 1st Floor, Montevideo, Uruguay</address>
             <a href="mailto:first.last@email.com" style="color:white">info@repremar.com</a><br /> +598 2916 1336
           </div>
           <!-- /.widget -->
