--- a/new/shipping/contactEn.html
+++ b/new/shipping/contactEn.html
@@ -39,13 +39,13 @@
                     <!--/.dropdown-menu -->
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./about.html">Sobre Nosotros</a>
+                    <a class="nav-link dropdown-toggle" href="./aboutEn.html">About Us</a>
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="./services.html">Servicios</a>
+                    <a class="nav-link dropdown-toggle" href="./servicesEn.html">Services</a>
                   </li>
                   <li class="nav-item dropdown dropdown-mega">
-                    <a class="nav-link dropdown-toggle" href="./contact.html">Contacto</a>
+                    <a class="nav-link dropdown-toggle" href="./contactEn.html">Contact</a>
                   </li>
                   <div class="offcanvas-footer d-lg-none">
                     <div>
@@ -69,7 +69,7 @@
                 <!-- /.languaje -->
                 <li class="nav-item dropdown language-select text-uppercase">
                   <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">Es</a>
+                    aria-haspopup="true" aria-expanded="false">En</a>
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="indexEn.html">En</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="index.html">Es</a></li>
@@ -101,7 +101,7 @@
       <div class="container pt-17 pb-20 pt-md-19 pb-md-21 text-center">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h1 class="display-1 mb-3 text-white" href="./contact.html">Contáctanos</h1>
+            <h1 class="display-1 mb-3 text-white" href="./contactEn.html">Contact Us</h1>
 
             <!-- /nav -->
           </div>
@@ -135,8 +135,8 @@
                         <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-location-pin-alt"></i> </div>
                       </div>
                       <div class="align-self-start justify-content-start">
-                        <h5 class="mb-1">Dirección</h5>
-                        <address>Misiones 1372 De Los Patricios Bldg. <br> Piso 1, Oficina 101-104. <br
+                        <h5 class="mb-1">Address</h5>
+                        <address>Misiones 1372 De Los Patricios Bldg. <br> 1st Floor, Office 101-104. <br
                             class="d-none d-md-block" />Montevideo, Uruguay</address>
                       </div>
                     </div>
@@ -146,7 +146,7 @@
                         <div class="icon text-primary fs-28 me-4 mt-n1"> <i class="uil uil-phone-volume"></i> </div>
                       </div>
                       <div>
-                        <h5 class="mb-1">Teléfono</h5>
+                        <h5 class="mb-1">Telephone/h5>
                         <p>+598 2916 1336 </p>
                       </div>
                     </div>
@@ -181,9 +181,9 @@
           <div class="row gy-6 gy-lg-0">
             <div class="col-lg-4">
               <div class="widget">
-                <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
-                <p class="lead mb-5">Repremar Shipping el mejor agenciamiento maritimo del mercado.</p>
-                <a href="./contact.html" class="btn btn-white  rounded-pill">Contáctanos</a>
+                <h3 class="h2 mb-3 text-white">Stay in contact</h3>
+                <p class="lead mb-5">Repremar Shipping distiguished in the region.</p>
+                <a href="./contactEn.html" class="btn btn-white  rounded-pill">Contact Us</a>
               </div>
               <!-- /.widget -->
             </div>
@@ -192,7 +192,7 @@
               <div class="widget">
                 <h4 class="widget-title text-white mb-3"></h4>
                 <ul class="list-unstyled text-reset mb-0">
-                  <li><a href="./contact.html"></a></li>
+                  <li><a href="./contactEn.html"></a></li>
                 </ul>
               </div>
               <!-- /.widget -->
@@ -200,11 +200,11 @@
             <!-- /column -->
             <div class="col-md-4 col-lg-2">
               <div class="widget">
-                <h4 class="widget-title text-white mb-3">Saber más</h4>
+                <h4 class="widget-title text-white mb-3">More Info</h4>
                 <ul class="list-unstyled  mb-0">
-                  <li><a href="#" style="color:white">Sobre nosotros</a></li>
-                  <li><a href="#" style="color:white">Servicios</a></li>
-                  
+                  <li><a href="#" style="color:white">About Us</a></li>
+                  <li><a href="#" style="color:white">Services</a></li>
+                  <li><a href="#" style="color:white"></a></li>
                 </ul>
               </div>
               <!-- /.widget -->
@@ -212,8 +212,8 @@
             <!-- /column -->
             <div class="col-md-4 col-lg-2">
               <div class="widget">
-                <h4 class="widget-title text-white mb-3">Información</h4>
-                <address>Misiones 1372 1er Piso, Montevideo, Uruguay</address>
+                <h4 class="widget-title text-white mb-3">Information</h4>
+                <address>Misiones 1372 1st Floor, Montevideo, Uruguay</address>
                 <a href="mailto:first.last@email.com" style="color:white">info@repremar.com</a><br /> +598 2916 1336
               </div>
               <!-- /.widget -->
@@ -244,6 +244,6 @@
       </div>
       <script src="./assets/js/plugins.js"></script>
       <script src="./assets/js/theme.js"></script>
-</body>
-
-</html>
+    </body>
+    
+    </html>
