--- a/new/shipping/index.html
+++ b/new/shipping/index.html
@@ -18,12 +18,12 @@
   <div class="content-wrapper">
     <header class="wrapper bg-white">
       <nav class="navbar navbar-expand-lg fancy navbar-light navbar-bg-light caret-none">
-        <div class="container">
+        <div class="container flex-lg-row flex-nowrap align-items-center">
           <div
             class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
             <div class="navbar-brand w-100">
               <a href="./index.html">
-                <img src="./assets/img/photos/logo1.png" />
+                <img src="./assets/img/photos/logo2.png" />
               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
