--- a/new/shipping/about.html
+++ b/new/shipping/about.html
@@ -112,7 +112,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-light angled upper-end lower-end">
+    <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
         
         <div class="container py-14 py-md-16">
