--- a/new/shipping/about.html
+++ b/new/shipping/about.html
@@ -96,7 +96,7 @@
       <!-- /.navbar -->
     </header>
     <!-- /header -->
-    <section class="wrapper bg-gray">
+    <section class="wrapper bg-gray" style="padding-bottom: 50px;">
       <div class="container pt-10 pt-md-14 text-center">
         <div class="row">
           <div class="col-xl-6 mx-auto">
