--- a/New/logistics/aboutEn.html
+++ b/New/logistics/aboutEn.html
@@ -19,10 +19,10 @@
     <header class="wrapper bg-gray">
       <nav class="navbar navbar-expand-lg fancy navbar-light navbar-bg-light caret-none">
         <div class="container">
-          <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
-            <div class="navbar-brand w-100">
-              <a href="./indexEn.html">
-                <img src="./assets/img/replog.png"/>
+          <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-80 justify-content-between align-items-center">
+            <div class="navbar-brand w-60">
+              <a href="./index.html">
+                <img src="./assets/img/replog4.png"/>
               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
