--- a/New/logistics/contenedores.html
+++ b/New/logistics/contenedores.html
@@ -19,11 +19,10 @@
     <header class="wrapper bg-gray">
       <nav class="navbar navbar-expand-lg fancy navbar-light navbar-bg-light caret-none">
         <div class="container">
-          <div
-            class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
-            <div class="navbar-brand w-100">
+          <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-80 justify-content-between align-items-center">
+            <div class="navbar-brand w-60">
               <a href="./index.html">
-                <img src="./assets/img/replog.png"/>
+                <img src="./assets/img/replog4.png"/>
               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
@@ -115,31 +114,30 @@
             <p class="lead fs-lg">Amplia variedad de contenedores para tus necesidades.</p>
             <div class="row gx-xl-10 gy-6">
               <div class="col-md-6">
-                  <div class="d-flex flex-row">
-                    <div>
-                      <img src="./assets/img/icons/lineal/link.svg" class="svg-inject icon-svg icon-svg-sm me-4"
-                        alt="" />
-                    </div>
-                    <div>
-                      <h4 class="mb-1">Obten tu contenedor</h4>
-                      <a href="./contenedores/index.html" class="btn btn-lg btn-soft-green rounded-pill me-5">Click Aqui</a>
-                    </div>
+                <div class="d-flex flex-row">
+                  <div>
+                    <img src="./assets/img/icons/lineal/link.svg" class="svg-inject icon-svg icon-svg-sm me-4" alt="" />
                   </div>
-                  <br>
-                  <div class="d-flex flex-row">
-                    <a href="pdf/REPREMAR_Equipment_Specifications.pdf" target="_blank"
-                      class="card shadow-lg lift h-100">
-                      <div class="card-body p-5 d-flex">
-                        <div>
-                          <span class="avatar bg-green text-white w-11 h-11 fs-20 me-4">CTNR</span>
-                        </div>
-                        <div>
-                          <span class="badge bg-pale-aqua text-aqua rounded py-1 mb-2">PDF</span>
-                          <h4 class="mb-1">Especificaciones de contenedores<br> y equipos.</h4>
-                        </div>
+                  <div>
+                    <h4 class="mb-1">Obten tu contenedor</h4>
+                    <a href="./contenedores/index.html" class="btn btn-lg btn-soft-green rounded-pill me-5">Click
+                      Aqui</a>
+                  </div>
+                </div>
+                <br>
+                <div class="d-flex flex-row">
+                  <a href="pdf/REPREMAR_Equipment_Specifications.pdf" target="_blank" class="card shadow-lg lift h-100">
+                    <div class="card-body p-5 d-flex">
+                      <div>
+                        <span class="avatar bg-green text-white w-11 h-11 fs-20 me-4">CTNR</span>
                       </div>
-                    </a>
-                  </div>
+                      <div>
+                        <span class="badge bg-pale-aqua text-aqua rounded py-1 mb-2">PDF</span>
+                        <h4 class="mb-1">Especificaciones de contenedores<br> y equipos.</h4>
+                      </div>
+                    </div>
+                  </a>
+                </div>
               </div>
               <!--/column -->
               <!--/column -->
