group final spanish

--- a/new/group/index.html
+++ b/new/group/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="stylesheet" href="./assets/css/colors/navy.css">
+
 </head>
 
 <body>
@@ -46,6 +47,26 @@
       </div>
       <!-- /.wrapper -->
     </section>
+    <div style="margin-top: 50px;">
+
+    </div>
+    <section class="wrapperino">
+      <div class="container py-14 py-md-17 text-center">
+        <i class="uil-ship text-white fs-70 opacity-55"></i>
+        <div class="row mt-3">
+          <div class="col-xl-9 col-xxl-8 mx-auto">
+            <p style="font-size: 70;">Agenciamiento marítimo,
+              transporte internacional de cargas,
+              y servicios logísticos integrales.
+              Somos REPREMAR.</p>
+            <!-- /.swiper-container -->
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
     <section class="wrapper bg-light">
       <div class="container py-14 py-md-16">
         <h2 class="fs-15 text-uppercase text-muted mb-3"></h2>
@@ -66,14 +87,15 @@
           <!-- /column -->
         </div>
         <!-- /.row -->
-        <div class="row row-cols-2 row-cols-md-3 row-cols-xl-5 gx-lg-6 gy-6 justify-content-center" style="padding-top: 50px;">
+        <div class="row row-cols-2 row-cols-md-3 row-cols-xl-5 gx-lg-6 gy-6 justify-content-center"
+          style="padding-top: 50px;">
           <div class="col">
             <div class="card shadow-lg h-100 align-items-center">
               <div class="card-body align-items-top d-flex px-0 py-0 p-md-0">
                 <a href="../shipping/index.html">
-                <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
-                  <img src="./assets/shipping.png" alt="" />
-                </figure>
+                  <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
+                    <img src="./assets/shipping.png" alt="" />
+                  </figure>
                 </a>
               </div>
               <!--/.card-body -->
@@ -85,9 +107,9 @@
             <div class="card shadow-lg h-100 align-items-center">
               <div class="card-body align-items-top d-flex px-0 py-0 p-md-0">
                 <a href="../logistics/index.html">
-                <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
-                  <img src="./assets/logistics.png" alt="" />
-                </figure>
+                  <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
+                    <img src="./assets/logistics.png" alt="" />
+                  </figure>
                 </a>
               </div>
               <!--/.card-body -->
@@ -98,9 +120,9 @@
             <div class="card shadow-lg h-100 align-items-center">
               <div class="card-body align-items-top d-flex px-0 py-0 p-md-0">
                 <a href="../logistics/index.html">
-                <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
-                  <img src="./assets/cielosur.jpg" alt="" />
-                </figure>
+                  <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
+                    <img src="./assets/cielosur.jpg" alt="" />
+                  </figure>
                 </a>
               </div>
               <!--/.card-body -->
@@ -111,9 +133,9 @@
             <div class="card shadow-lg h-100 align-items-center">
               <div class="card-body align-items-top d-flex px-0 py-0 p-md-0">
                 <a href="../logistics/index.html">
-                <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
-                  <img src="./assets/talfir.png" alt="" />
-                </figure>
+                  <figure class="px-md-0 px-xl-0 px-xxl-0 mb-0">
+                    <img src="./assets/talfir.png" alt="" />
+                  </figure>
                 </a>
               </div>
               <!--/.card-body -->
@@ -124,9 +146,9 @@
             <div class="card shadow-lg h-100 align-items-center">
               <div class="card-body align-items-top d-flex px-4 py-6 p-md-0">
                 <a href="../logistics/index.html">
-                <figure class="px-md-10 px-xl-10 px-xxl-8 mb-10">
-                  <img src="./assets/swanseaazul.png" style="height: 60%;" alt="" />
-                </figure>
+                  <figure class="px-md-10 px-xl-10 px-xxl-8 mb-10">
+                    <img src="./assets/swanseaazul.png" style="height: 60%;" alt="" />
+                  </figure>
                 </a>
               </div>
               <!--/.card-body -->
@@ -139,28 +161,104 @@
       </div>
       <!-- /.container -->
     </section>
+    <hr class="divisor" />
+    <section class="wrapper bg-light">
+      <div class="container py-14 py-md-16">
+        <div class="row">
+          <div class="col-lg-4">
+            <h3 class="display-4 pe-xl-15" style="margin-top: 50px;">¿POR QUE ELEGIR REPREMAR?</h3>
+          </div>
+          <!-- /column -->
+          <div class="col-lg-8">
+            <div class="row align-items-center counter-wrapper gy-6 text-center">
+              <div class="col-md-4" style="align-items: center;">
+                <img src="./assets/ventajas.png" style="size: 30%; height: 100px; width: auto; margin-bottom: 50px"
+                  alt="" />
+                <h3 class="counter">Ventajas</h3>
+                <p class="mb-0">Soluciones Integrales
+                  Representaciones de Primer Nivel
+                  Presencia y Cobertura Regional
+                  Calidad y Transparencia
+                  Personal Experiente y Capacitado</p>
+              </div>
+              <!--/column -->
+              <div class="col-md-4" style="align-items: center; margin-left: 150px;">
+                <img src="./assets/seguridad.png" style="size: 30%; height: 100px; width: auto; margin-bottom: 50px"
+                  alt="" />
+                <h3 class="counter" style="align-items: top;">Seguridad</h3>
+                <p class="mb-0">Solidez Financiera
+                  Referencias Bancarias
+                  Referencias Comerciales
+                  Seguros Internacionales
+                  (ITIC & Aktiv-Assekuranz)</p>
+              </div>
+              <!--/column -->
+              <!--/column -->
+            </div>
+            <!--/.row -->
+          </div>
+          <!-- /column -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container -->
+    </section>
     <!-- /section -->
   </div>
   <!-- /.container -->
-  <footer class="bg-blue text-white" style="height: 50%;">
+  <footer class="bg-blue text-white">
     <div class="container pt-20 pt-lg-21 pb-7">
       <div class="row gy-6 gy-lg-0">
-        <!--/.row -->
-        <hr class="mt-13 mt-md-15 mb-7" />
-        <div class="d-md-flex align-items-center justify-content-between">
-          <p class="mb-2 mb-lg-0">© 2023 Repremar Group. All rights reserved.</p>
-          <nav class="nav social social-white text-md-end">
-            <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
-            <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
-            <a href="https://www.instagram.com/repremarlogistics.uy/"><i class="uil uil-instagram"></i></a>
-            <a href="https://www.linkedin.com/company/repremar-logistics/?originalSubdomain=uy"><i
-                class="uil uil-linkedin"></i></a>
-          </nav>
-          <!-- /.social -->
+        <div class="col-lg-4">
+          <div class="widget">
+            <h3 class="h2 mb-3 text-white">Repremar Group</h3>
+            <p class="lead mb-5">Servicio con respaldo en calidad.</p>
+          </div>
+          <!-- /.widget -->
         </div>
-        <!-- /div -->
+        <!-- /column -->
+        <div class="col-md-4 col-lg-2 offset-lg-2">
+          <div class="widget">
+            <h4 class="widget-title text-white mb-3"></h4>
+            <ul class="list-unstyled text-reset mb-0">
+              <li><a href="./contact.html"></a></li>
+            </ul>
+          </div>
+          <!-- /.widget -->
+        </div>
+        <!-- /column -->
+        <div class="col-md-4 col-lg-2">
+          <div class="widget">
+          </div>
+          <!-- /.widget -->
+        </div>
+        <!-- /column -->
+        <div class="col-md-4 col-lg-2">
+          <div class="widget">
+            <h4 class="widget-title text-white mb-3">Información</h4>
+            <address>Misiones 1372 1er Piso, Montevideo, Uruguay</address>
+            <a href="mailto:first.last@email.com" style="color:white">info@repremar.com</a><br /> +598 2916 1336
+          </div>
+          <!-- /.widget -->
+        </div>
+        <!-- /column -->
       </div>
-      <!-- /.container -->
+      <!--/.row -->
+      <hr class="mt-13 mt-md-15 mb-7" />
+      <div class="d-md-flex align-items-center justify-content-between">
+        <p class="mb-2 mb-lg-0">© 2023 Repremar Group. All rights reserved.</p>
+        <nav class="nav social social-white text-md-end">
+          <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
+          <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
+          <a href="https://www.instagram.com/repremarlogistics.uy/"><i class="uil uil-instagram"></i></a>
+          <a href="https://www.linkedin.com/company/repremar-logistics/?originalSubdomain=uy"><i
+              class="uil uil-linkedin"></i></a>
+        </nav>
+        <!-- /.social -->
+      </div>
+      <!-- /div -->
+    </div>
+    <!-- /.container -->
   </footer>
   <div class="progress-wrap">
     <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
