--- a/logistics/index.html
+++ b/logistics/index.html
@@ -501,7 +501,7 @@ Contact
                                 </div>
 
                                 <div class="contactus">
-                                    <form id="contactform" action="assets/php/submit.php" method="post">
+                                    <form id="contactform" action="mailto:logistics@repremar.com" method="post" enctype="text/plain">
 
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
