--- a/logistics/index.html
+++ b/logistics/index.html
@@ -37,6 +37,7 @@ Style Sheets
     <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
     <link rel="stylesheet" type="text/css" href="assets/css/jquery.vegas.css">
     <link rel="stylesheet" type="text/css" href="assets/css/prettyPhoto.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/estilos.css">
     <link rel="stylesheet" href="assets/css/main.css">
 
     <script src="assets/js/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -501,7 +502,7 @@ Contact
                                 </div>
 
                                 <div class="contactus">
-                                    <form id="contactform" action="mailto:logistics@repremar.com" method="post">
+                                    <form id="contactform1" action="mailto:logistics@repremar.com" method="post">
 
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -514,7 +515,7 @@ Contact
                                                 <textarea name="message" id="message" placeholder="Comment:"></textarea>
                                             </div>
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                                <button type="submit"><span class="send-icons"><span class="send-text">ENVIAR</span></span></button> </div>
+                                            <input type="submit" class="boton-enviar1" value="ENVIAR">
 
                                         </div>
                                     </form>
