--- a/logistics/index_es.html
+++ b/logistics/index_es.html
@@ -497,7 +497,7 @@ Contact
                                 </div>
 
                                 <div class="contactus">
-                                    <form id="contactform" action="assets/php/submit.php" method="post">
+                                    <form id="contactform1" action="mailto:logistics@repremar.com" method="post">
 
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -510,7 +510,7 @@ Contact
                                                 <textarea name="message" id="message" placeholder="Comment:"></textarea>
                                             </div>
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                                <button type="submit"><span class="send-icons"><span class="send-text">ENVIAR</span></span></button> </div>
+                                            <input type="submit" class="boton-enviar1" value="ENVIAR">
 
                                         </div>
                                     </form>
