update form test1

--- a/logistics/index.html
+++ b/logistics/index.html
@@ -502,7 +502,8 @@ Contact
                                 </div>
 
                                 <div class="contactus">
-                                    <form id="contactform1" action="mailto:logistics@repremar.com" method="post">
+                                    <form data-netlify="true" onSubmit="submit" name="contactform" method="post" class="form"
+                                    action="success.html" data-netlify-honeypot="botfield">
 
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
