--- a/logistics/index_es.html
+++ b/logistics/index_es.html
@@ -554,7 +554,7 @@ Contact
 
                                 <div class="contactus">
                                     <form data-netlify="true" onSubmit="submit" name="contactform" method="post"
-                                        class="form" action="success.html" data-netlify-honeypot="botfield">
+                                        class="form" action="success.html">
 
                                         <div class="row">
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -567,7 +567,7 @@ Contact
                                                 <textarea name="message" id="message" placeholder="Comment:"></textarea>
                                             </div>
                                             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-                                                <input type="submit" class="boton-enviar1" value="ENVIAR">
+                                                <button type="submit" class="boton-enviar1">ENVIAR</button>
 
                                             </div>
                                     </form>
