logos calidad logistics

--- a/shipping/index_es.html
+++ b/shipping/index_es.html
@@ -635,12 +635,10 @@ R® Ships simplifica y agiliza el proceso de intercambio de información relacio
                     </div>
 
                     <ul id="certificados">
-                        <li><img src="assets/images/shipping-policy-1.jpg" width="212" height="91"></li>
-                        <li><img src="assets/images/shipping-policy-2.jpg" width="102" height="110"></li>
+                        <li><img src="assets/images/shipping-policy-2.png" width="120" height="110"></li>
                         <li><img src="assets/images/shipping-policy-3.jpg" width="70" height="98"></li>
-                        <li><img src="assets/images/shipping-policy-4.jpg" width="148" height="64"></li>
                         <li><a href="certification/TRACE_Certification-REPREMAR.pdf" target="_blank"><img src="assets/images/shipping-policy-5.jpg" width="111" height="89"></a></li>
-                        <li><a href="assets/images/politica_es.pdf" target="_blank"><img src="assets/images/botonmision2.svg"></a></li>
+                        <li><a href="assets/images/politica.pdf" target="_blank"><img src="assets/images/botonmision.svg"></a></li>
 
                     </ul>
                     
