--- a/shipping/index.html
+++ b/shipping/index.html
@@ -628,7 +628,7 @@ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
                     </div>
 
                     <ul id="certificados">
-                        <li><img src="assets/images/shipping-policy-2." width="102" height="110"></li>
+                        <li><img src="assets/images/shipping-policy-2.png" width="120" height="110"></li>
                         <li><img src="assets/images/shipping-policy-3.jpg" width="70" height="98"></li>
                         <li><a href="certification/TRACE_Certification-REPREMAR.pdf" target="_blank"><img src="assets/images/shipping-policy-5.jpg" width="111" height="89"></a></li>
                         <li><a href="assets/images/politica.pdf" target="_blank"><img src="assets/images/botonmision.svg"></a></li>
