--- a/logistics/index_es.html
+++ b/logistics/index_es.html
@@ -268,7 +268,10 @@ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
                         </a>
                     </div>
                 </div>
-
+                <ul id="certificados">
+                    <lu><img src="assets/images/quality2.png" width="120" height="110" style="margin-right: 20px;"></lu>
+                    <lu><img src="assets/images/quality.png" width="70" height="98" style="margin-right: 50px;"></lu>
+                </ul>
             </div>
         </section>
         <!--=================================
