se sube projects

--- a/logistics/test/index_es.html
+++ b/logistics/test/index_es.html
@@ -86,7 +86,7 @@
                   <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="index_es.html">Es</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
                   </ul>
                 </li>
                 <li class="nav-item d-none d-md-block">
@@ -132,8 +132,8 @@
             <div class="widget">
               <h4 class="widget-title text-white mb-3">Follow Us</h4>
               <nav class="nav social social-white">
-                <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
-                <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
+                <a href="#"><i class="uil uil-instagram"></i></a>
+                <a href="#"><i class="uil uil-linkedin"></i></a>
               </nav>
               <!-- /.social -->
             </div>
@@ -285,7 +285,7 @@
           <!--/.row -->
           <div class="row gx-lg-8 gx-xl-12 gy-10">
             <div class="col-lg-7 order-lg-2">
-              <figure><img class="w-auto" src="./assets/img/photos/oceanfreights5.jpg" srcset="./assets/img/photos/oceanfreights5.jpg 2x" alt="" /></figure>
+              <figure><img class="w-auto" src="./assets/img/photos/trust2.jpg" srcset="./assets/img/photos/trust2.jpg 2x" alt="" /></figure>
             </div>
             <!--/column -->
             <div class="col-lg-5">
