--- a/logistics/test/Project1.html
+++ b/logistics/test/Project1.html
@@ -50,7 +50,9 @@
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="./technology.html"">Technology</a>
                 </li>
-
+                <li class="nav-item dropdown">
+                  <a class="nav-link" href="./green.html"">Go Green</a>
+                </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link" href="./contact.html"">Contact</a>
                 </li>
