se arreglan datos

--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -116,7 +116,7 @@
             <div class="widget mb-8">
               <h4 class="widget-title text-white mb-3">Contact Info</h4>
               <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
-              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
             </div>
             <!-- /.widget -->
             <div class="widget mb-8">
@@ -459,28 +459,19 @@
       <!-- /section -->
     </div>
     <!-- /.content-wrapper -->
-    <footer class="bg-dark section-frame">
-      <div class="container pb-13 pb-md-15">
-        <div class="card image-wrapper bg-full bg-image bg-overlay mt-n50p mx-md-5" data-image-src="./assets/img/photos/bg27.jpg">
-          <div class="card-body p-6 p-md-11 d-lg-flex flex-row align-items-lg-center justify-content-md-between text-center text-lg-start">
-            <h3 class="display-4 mb-6 mb-lg-0 pe-lg-10 pe-xl-5 pe-xxl-18 text-white">We are trusted by over 1000+ clients. Join them by using our services and grow your business.</h3>
-            <a href="#" class="btn btn-lg btn-white rounded mb-0 text-nowrap">Join Us</a>
-          </div>
-          <!--/.card-body -->
-        </div>
-        <!--/.card -->
-        <div class="text-inverse mx-md-5 mt-n15 mt-lg-0">
-          <div class="row gy-6 gy-lg-0">
-            <div class="col-md-4 col-lg-3">
-              <div class="widget">
-                <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png" srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="" />
-                <p class="mb-4">© <script>
-                    document.write(new Date().getUTCFullYear());
-                  </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
-                <nav class="nav social social-white">
-                  <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
-                  <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
-                </nav>
+    <footer class="bg-dark text-inverse">
+      <div class="container py-13 py-md-15">
+        <div class="row gy-6 gy-lg-0">
+          <div class="col-md-4 col-lg-3">
+            <div class="widget">
+              <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png" srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="" />
+              <p class="mb-4">© <script>
+                  document.write(new Date().getUTCFullYear());
+                </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
+              <nav class="nav social social-white">
+                <a href="#"><i class="uil uil-linkedin"></i></a>
+                <a href="#"><i class="uil uil-instagram"></i></a>
+              </nav>
                 <!-- /.social -->
               </div>
               <!-- /.widget -->
@@ -490,7 +481,7 @@
               <div class="widget">
                 <h4 class="widget-title text-white mb-3">Get in Touch</h4>
                 <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-                <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+                <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
               </div>
               <!-- /.widget -->
             </div>
@@ -501,7 +492,7 @@
                 <ul class="list-unstyled  mb-0">
                   <li><a href="aboutLogistics.html">About Us</a></li>
                   <li><a href="#">Our Story</a></li>
-                  <li><a href="Project.html">Projects</a></li>
+                  <li><a href="projects.html">Projects</a></li>
                   <li><a href="terms.html">Terms of Use</a></li>
                   <li><a href="#">Privacy Policy</a></li>
                 </ul>
