--- a/logistics/test/Ocean.html
+++ b/logistics/test/Ocean.html
@@ -62,14 +62,11 @@
               <!-- /.navbar-nav -->
               <div class="offcanvas-footer d-lg-none">
                 <div>
-                  <a href="mailto:first.last@email.com" class="link-inverse">info@email.com</a>
-                  <br /> 00 (123) 456 78 90 <br />
+                  <a href="mailto:info.logistics@repremar.com" class="link-inverse">info.logistics@repremar.com</a>
+                  <br /> <a href="tel:+59829169416">+598 2916 9416</a> <br />
                   <nav class="nav social social-white mt-4">
-                    <a href="#"><i class="uil uil-twitter"></i></a>
-                    <a href="#"><i class="uil uil-facebook-f"></i></a>
-                    <a href="#"><i class="uil uil-dribbble"></i></a>
-                    <a href="#"><i class="uil uil-instagram"></i></a>
-                    <a href="#"><i class="uil uil-youtube"></i></a>
+                    <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
                   </nav>
                   <!-- /.social -->
                 </div>
@@ -85,7 +82,7 @@
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="index_es.html">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
@@ -119,16 +116,16 @@
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Contact Info</h4>
             <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
-            <a href="mailto:first.last@email.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+            <a href="mailto:first.last@email.com">info.logistics@repremar.com</a><br /><a href="tel:+59829169416">+598 2916 9416</a>
           </div>
           <!-- /.widget -->
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Learn More</h4>
             <ul class="list-unstyled">
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Terms of Use</a></li>
+              <li><a href="aboutLogistics.html">Our Story</a></li>
+              <li><a href="terms.html">Terms of Use</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -283,8 +280,8 @@
                 document.write(new Date().getUTCFullYear());
               </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-linkedin"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
             </nav>
               <!-- /.social -->
             </div>
@@ -295,7 +292,7 @@
             <div class="widget">
               <h4 class="widget-title text-white mb-3">Get in Touch</h4>
               <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
             </div>
             <!-- /.widget -->
           </div>
@@ -305,9 +302,9 @@
               <h4 class="widget-title text-white mb-3">Learn More</h4>
               <ul class="list-unstyled  mb-0">
                 <li><a href="aboutLogistics.html">About Us</a></li>
-                <li><a href="#">Our Story</a></li>
+                <li><a href="aboutLogistics.html">Our Story</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Terms of Use</a></li>
+                <li><a href="terms.html">Terms of Use</a></li>
                 <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
