--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -62,13 +62,11 @@
               <!-- /.navbar-nav -->
               <div class="offcanvas-footer d-lg-none">
                 <div>
-                  <a href="mailto:first.last@email.com" class="link-inverse">info@email.com</a>
-                  <br /> 00 (123) 456 78 90 <br />
+                  <a href="mailto:info.logistics@repremar.com" class="link-inverse">info.logistics@repremar.com</a>
+                  <br/><a href="tel:+59829169416">+598 2916 9416</a>  <br/>
                   <nav class="nav social social-white mt-4">
-                    <a href="#"><i class="uil uil-twitter"></i></a>
-                    <a href="#"><i class="uil uil-facebook-f"></i></a>
-                    <a href="#"><i class="uil uil-linkedin"></i></a>
-                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
                   </nav>
                   <!-- /.social -->
                 </div>
@@ -84,7 +82,7 @@
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="index_es.html">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
@@ -118,16 +116,16 @@
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Contact Info</h4>
             <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
-            <a href="mailto:first.last@email.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+            <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
           </div>
           <!-- /.widget -->
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Learn More</h4>
             <ul class="list-unstyled">
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Terms of Use</a></li>
+              <li><a href="aboutLogistics.html">Our Story</a></li>
+              <li><a href="terms.html">Terms of Use</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -226,7 +224,7 @@
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-16 align-items-center">
           <div class="col-lg-7">
-            <figure><img class="w-auto" src="./assets/img/photos/teamwork.jpg" srcset="./assets/img/photos/teamwork.jpg 2x" alt="" /></figure>
+            <figure><img class="w-auto" src="./assets/img/photos/oceanfreights.jpg" srcset="./assets/img/photos/oceanfreights.jpg 2x" alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
@@ -267,7 +265,7 @@
         <!--/.row -->
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7 order-lg-2">
-            <figure><img class="w-auto" src="./assets/img/photos/trust.jpg" srcset="./assets/img/photos/trust.jpg 2x" alt="" /></figure>
+            <figure><img class="w-auto" src="./assets/img/photos/craneloadingcargo.jpg" srcset="./assets/img/photos/craneloadingcargo.jpg 2x" alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
@@ -410,7 +408,7 @@
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7">
-            <figure><img class="w-auto" src="./assets/img/illustrations/contact.jpg" srcset="./assets/img/illustrations/contact.jpg 2x" alt="" /></figure>
+            <figure><img class="w-auto" src="./assets/img/photos/contactoLogisticsBarco.png" srcset="./assets/img/photos/contactoLogisticsBarco.png 2x" alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
@@ -431,7 +429,7 @@
               </div>
               <div>
                 <h5 class="mb-1">Phone</h5>
-                <p>00 (+598) 2916 9416</p>
+                <p><a href="tel:+59829169416">+598 2916 9416</a></p>
               </div>
             </div>
             <div class="d-flex flex-row">
@@ -463,8 +461,8 @@
                 document.write(new Date().getUTCFullYear());
               </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-linkedin"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
             </nav>
               <!-- /.social -->
             </div>
@@ -475,7 +473,7 @@
             <div class="widget">
               <h4 class="widget-title text-white mb-3">Get in Touch</h4>
               <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
             </div>
             <!-- /.widget -->
           </div>
@@ -485,9 +483,9 @@
               <h4 class="widget-title text-white mb-3">Learn More</h4>
               <ul class="list-unstyled  mb-0">
                 <li><a href="aboutLogistics.html">About Us</a></li>
-                <li><a href="#">Our Story</a></li>
+                <li><a href="aboutLogistics.html">Our Story</a></li>
                 <li><a href="Project.html">Projects</a></li>
-                <li><a href="#">Terms of Use</a></li>
+                <li><a href="terms.html">Terms of Use</a></li>
                 <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
