se actualia tema de logos que quedaban chicos

--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/colors/purple.css">
+  <link rel="stylesheet" href="./assets/css/colors/green.css">
   <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
@@ -23,8 +23,8 @@
           <div class="container flex-lg-row flex-nowrap align-items-center">
             <div class="navbar-brand w-100">
               <a href="./index.html">
-                <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png" srcset="./assets/img/LogisticsHorizontal.png 2x" alt="Repremar Logistics Logo" />
-                <img class="logo-light" src="./assets/img/LogisticsHorizontalBlanco.png" srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="Repremar Logistics Logo Blanco" />
+                <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png" alt="Repremar Logistics Logo" />
+                <img class="logo-light" src="./assets/img/LogisticsHorizontalBlanco.png"  alt="Repremar Logistics Logo Blanco" />
               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
@@ -44,10 +44,8 @@
                       <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
-
                       <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
-
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
